# fin-doc-rag-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset_and_ingest.py
app/: main.py
docs/: ROADMAP.md
docs/ADRs/: 0001-local-vector-storage-and-pii-masking.md  0002-orchestration-and-development-environment.md  0003-automated-evaluation-with-ragas.md  0004-enterprise-data-governance.md  0005-automated-testing-and-validation.md  0006-role-based-access-control.md  0007-semantic-chunking.md  0008-local-poc-to-cloud-scaling.md  0009-centralized-configuration.md  0010-retrieval-quality-pipeline.md
scripts/: eval_dataset.json  evaluate_ragas.py
src/: config.py
src/ingestion/: document_processor.py  hash_tracker.py
src/rag/: agent.py  chroma_deal_store.py  deal_analyzer.py  utils.py  vector_store.py
test_dir/: chroma.sqlite3
tests/: test_agent_routing.py  test_chroma_deal_store.py  test_document_deletion.py  test_document_processor.py  test_end_to_end_ingestion.py  test_hash_tracker.py  test_retrieval_quality.py  test_semantic_chunking.py  test_transparency_logic.py  test_vector_store.py
